Add Qt Projects

--- a/.gitignore
+++ b/.gitignore
@@ -50,8 +50,8 @@ Temporary Items
 1-click_Dev/cache/
 1-click_Dev/figure/
 Documentation/Old/
-Qt/
 
+Qt/Main/build/
 SA_App_4250/.Rproj.user/
 SA_Reference/figure/
 SA_Reference/Ref_gares_cache/
