--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,8 @@ Documentation/Old/
 Qt/
 
 SA_App_4250/.Rproj.user/
+SA_App_4250/cache/
+
 SA_Reference/figure/
 SA_Reference/Ref_gares_cache/
 SA_Reference/Ref_gares_files/
